--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.0.2
-matplotlib==3.8.3
+matplotlib
 networkx==3.2.1
-numpy==1.24.4  # Older version that may work with GCC 6.3.0
+numpy
 werkzeug==3.0.1
 setuptools>=61.0
 wheel
